namespace EnumValue
{
    public enum PlayerStates
    {
        Idle,
        Move,
        Roll,
        ComboAttackOne,
        ComboAttackTwo,
        ComboAttackThree,
        ReadySecondaryAction,
        OnSecondaryAction,
        SecondaryAction
    }

    public enum Weapons
    {
        ShortSwordAndShield,
        BigSword
    }
}