namespace EnumValue
{
    public enum PlayerStates
    {
        Idle,
        Move,
        Roll,
        ComboAttackOne,
        ComboAttackTwo,
        ComboAttackThree,
        ReadySecondaryAction,
        OnSecondaryAction,
        SecondaryAction
    }

    public enum Weapons
    {
        ShortSwordAndShield,
        BigSword
    }

    public enum GolemTurretFirePositions
    {
        Down,
        Left,
        Right,
        Up
    }

    public enum GolemSoldierDirection
    {
        Down,
        Left,
        Right,
        Up
    }
}