public static class WeaponAnimParams
{
    public const string DIRX = "WeaponDirX";
    public const string DIRY = "WeaponDirY";
    public const string IDLE = "Idle";
    public const string COMBOATTACKONE = "ComboAttackOne";
    public const string COMBOATTACKTWO = "ComboAttackTwo";
    public const string COMBOATTACKTHREE = "ComboAttackThree";
    public const string READYSECONDARYACTION = "ReadySecondaryAction";
    public const string ONSECONDARYACTION = "OnSecondaryAction";
    public const string SECONDARYACTION = "SecondaryAction";
}